--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div class="clearfix">
             <div style="text-align: justify">
   Hello! I'm a Doctoral Student at <a href="https://www.mpi-inf.mpg.de/home/" rel="external nofollow noopener" target="_blank"> Max Planck Institute for Informatics </a>, under the supervision of <a href="https://aidam.mpi-inf.mpg.de/" rel="external nofollow noopener" target="_blank"> Dr. Vahid Babaei </a>.
-  Previously, I obtained an M.S. in Robotics from <a href="https://www.kaist.ac.kr/en/" rel="external nofollow noopener" target="_blank">KAIST</a>, South Korea, working closely with <a href="http://ave.kaist.ac.kr/" rel="external nofollow noopener" target="_blank">Prof. Seung-Hyun Kong</a>, and a B.Sc. in Electrical Engineering from <a href="https://www.itb.ac.id/about-itb" rel="external nofollow noopener" target="_blank">Bandung Institute of Technology</a>, Indonesia. 
+  Previously, I obtained an M.S. in Robotics from <a href="https://www.kaist.ac.kr/en/" rel="external nofollow noopener" target="_blank">KAIST</a>, South Korea, and a B.Sc. in Electrical Engineering from <a href="https://www.itb.ac.id/about-itb" rel="external nofollow noopener" target="_blank">Bandung Institute of Technology</a>, Indonesia. 
 </div>
 
 <div style="text-align: justify">
