--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
           <div class="clearfix">
             <div style="text-align: justify">
-  Hello! I'm a Doctoral Student at <a href="https://www.mpi-inf.mpg.de/home/" rel="external nofollow noopener" target="_blank"> Max Planck Institute for Informatics </a>, under the supervision of <a href="https://aidam.mpi-inf.mpg.de/" rel="external nofollow noopener" target="_blank"> Dr. Vahid Babaei </a>.
+  Hello! I'm a Doctoral Student at <a href="https://www.mpi-inf.mpg.de/home/" rel="external nofollow noopener" target="_blank"> Max Planck Institute for Informatics</a>, working under the supervision of <a href="https://aidam.mpi-inf.mpg.de/" rel="external nofollow noopener" target="_blank"> Dr. Vahid Babaei</a>.
   Previously, I obtained an M.S. in Robotics from <a href="https://www.kaist.ac.kr/en/" rel="external nofollow noopener" target="_blank">KAIST</a>, South Korea, and a B.Sc. in Electrical Engineering from <a href="https://www.itb.ac.id/about-itb" rel="external nofollow noopener" target="_blank">Bandung Institute of Technology</a>, Indonesia. 
 </div>
 
